added more comments to user interface

--- a/lesson01/index.html
+++ b/lesson01/index.html
@@ -44,6 +44,7 @@
   </form>
 
   <h2>Sharing Candy</h2>
+  <p>The bigger a household, the more people amongst whom candy must be divided. This calculator shows how many pieces each person gets to keep after sharing equally with everyone in their household.</p>
   <p>Household sizes:
     <ul>
       <li>Bob: 3</li>
