coded basic semantic structure

--- a/lesson02/assignment/index.html
+++ b/lesson02/assignment/index.html
@@ -9,7 +9,24 @@
     </head>
     <body>
         <main class="main">
-            <h1>title</h1>
+          <div class="identity">
+            <img src="img/headshot.jpg" class="headshot" alt="Headshot of a handsome white lab mix wearing a bowtie">
+            <div class="name-position">
+              <h1>Paolo Maldini</h1>
+              <h3>Front End Developer</h3>
+            </div>
+          </div>
+          <div class="info">
+            <p>Company: Web Weavers</p>
+            <p>Experience: 3 years</p>
+            <p>School: University of Washington</p>
+            <p>Major: Marketing</p>
+            <p>Email: paolo@example.com</p>
+            <div>
+              <img src="/img/linkedin.svg" alt="linkedIn logo">
+              <a href=#>paolo@linkedinprofile.com</a>
+            </div>
+          </div>
         </main>
     </body>
 </html>
