--- a/lesson02/assignment/index.html
+++ b/lesson02/assignment/index.html
@@ -17,12 +17,12 @@
             </div>
           </div>
           <div class="info">
-            <p>Company: Web Weavers</p>
-            <p>Experience: 3 years</p>
-            <p>School: University of Washington</p>
-            <p>Major: Marketing</p>
-            <p>Email: paolo@example.com</p>
-            <div>
+            <p><span class="spanstyle">Company:</span> Web Weavers</p>
+            <p><span class="spanstyle">Experience:</span> 3 years</p>
+            <p><span class="spanstyle">School:</span> University of Washington</p>
+            <p><span class="spanstyle">Major:</span> Marketing</p>
+            <p><span class="spanstyle">Email:</span> paolo@example.com</p>
+            <div class="social-link">
               <img src="/img/linkedin.svg" alt="linkedIn logo">
               <a href=#>paolo@linkedinprofile.com</a>
             </div>
