--- a/lesson03/assignment/index.html
+++ b/lesson03/assignment/index.html
@@ -5,13 +5,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Fun with Constructors!</title>
-  <link rel="stylesheet" href="./css/style.css">
-	<script src="index.js"></script>
+	<link rel="stylesheet" href="css/style2.css" />
+
 </head>
 <body>
 	<h1>Assignment 3</h1>
 	<section class="template-hook">
 		Fill this section with the templated components
+		<div id="card-list">
+			<!--personnel cards will be inserted here-->
+		</div>
 	</section>
+	<script src="index.js"></script>
 </body>
 </html>
