updated media queries to work for smaller screens

--- a/lesson03/assignment/index.html
+++ b/lesson03/assignment/index.html
@@ -11,10 +11,9 @@
 <body>
 	<h1>Assignment 3</h1>
 	<section class="template-hook">
-		Fill this section with the templated components
-		<div id="card-list">
-			<!--personnel cards will be inserted here-->
-		</div>
+		<!-- Fill this section with the templated components -->
+		<h3>Directory of Qualified Professionals</h3>
+		<!--personnel cards will be inserted here-->
 	</section>
 	<script src="index.js"></script>
 </body>
