implemented site architecture and partials

--- a/lesson04/assignment/index.html
+++ b/lesson04/assignment/index.html
@@ -5,11 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+  <title>Winecierge.com</title>
 </head>
 <body>
+  <header>
+    <img src="./images/winecierge-logo.svg">
+    <h3>Helping you plan for your next wine experience</h3>
+    <nav>
+      <ul>
+        <li><a href=#>Home</a></li>
+        <li><a href="education.html">Wine Education</a></li>
+        <li><a href="news.html">Industry News</a></li>
+        <li><a href="mycellar.html">My Cellar</a></li>
+      </ul>
+    </nav>
+  </header>
   <main class="main">
+    <h1>Welcome to Winecierge.com</h1>
+    <p>blah blah blah a test!!!</p>
 
   </main>
+  <footer>
+
+  </footer>
 </body>
 </html>
