added main components and basic hover effects

--- a/lesson04/assignment/index.html
+++ b/lesson04/assignment/index.html
@@ -9,21 +9,66 @@
 </head>
 <body>
   <header>
-    <img src="./images/winecierge-logo.svg">
-    <h3>Helping you plan for your next wine experience</h3>
-    <nav>
-      <ul>
-        <li><a href=#>Home</a></li>
-        <li><a href="education.html">Wine Education</a></li>
-        <li><a href="news.html">Industry News</a></li>
-        <li><a href="mycellar.html">My Cellar</a></li>
-      </ul>
-    </nav>
+    <div class="logo-container">
+      <img src="./img/winecierge-logo-light.svg">
+      <h3>Helping you plan your next wine experience</h3>
+    </div>
+    <!-- <nav>
+      <a href=#>Home</a>
+      <a href="about.html">About</a>
+      <a href="education.html">Wine Education</a>
+      <a href="news.html">Industry News</a>
+      <a href="login.html">My Cellar</a>
+    </nav> -->
   </header>
+  <!-- Begin html based on source code - source: https://www.mockplus.com/resource/post/30-excellent-ui-hover-animations-for-your-inspiration -->
   <main class="main">
-    <h1>Welcome to Winecierge.com</h1>
-    <p>blah blah blah a test!!!</p>
-
+    <div class="box-container">
+        <div class="nav-option">
+          <div class="pic-layer">
+            <img src="./img/red-mtn.jpg">
+            <h2>About Winecierge</h2>
+          </div>
+          <div class="mask">
+              <h3>About Winecierge</h3>
+              <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
+              <a href="#" class="info">Read More</a>
+          </div>
+        </div>
+        <div class="nav-option">
+          <div class="pic-layer">
+            <img src="./img/wine-education.jpg" />
+            <h2>Wine Education</h2>
+          </div>
+          <div class="mask">
+            <h3>Wine Education</h3>
+            <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
+            <a href="#" class="info">Read More</a>
+          </div>
+        </div>
+        <div class="nav-option">
+          <div class="pic-layer">
+            <img src="./img/merlot-cluster.jpg" />
+            <h2>Industry News</h2>
+          </div>
+          <div class="mask">
+              <h3>Industry News</h3>
+              <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
+              <a href="#" class="info">Read More</a>
+          </div>
+        </div>
+        <div class="nav-option">
+          <div class="pic-layer">
+            <img src="./img/bottle-cellar.jpg"  alt"Photo by Javier Balseiro on Unsplash">
+            <h2>My Cellar</h2>
+          </div>
+          <div class="mask">
+              <h3>My Cellar</h3>
+              <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
+              <a href="#" class="info">Read More</a>
+          </div>
+        </div>
+      </div>
   </main>
   <footer>
 
