refined transition effects

--- a/lesson04/assignment/index.html
+++ b/lesson04/assignment/index.html
@@ -25,53 +25,53 @@
   <main class="main">
     <div class="box-container">
         <div class="nav-option">
+          <div class="mask">
+              <h3>About Winecierge</h3>
+              <p>Offering introductory lessons and the latest in industry news, we're here to serve as a concierge of wine experiences for burgeoning wine enthusiasts.</p>
+              <a href="#" class="info">Read More</a>
+          </div>
           <div class="pic-layer">
             <img src="./img/red-mtn.jpg">
             <h2>About Winecierge</h2>
           </div>
-          <div class="mask">
-              <h3>About Winecierge</h3>
-              <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
-              <a href="#" class="info">Read More</a>
-          </div>
         </div>
         <div class="nav-option">
+          <div class="mask">
+            <h3>Wine Education</h3>
+            <p>Follow our blog of brief lessons about wine regions, the science of winemaking, and sensory appreciation of wine.</p>
+            <a href="#" class="info">Read More</a>
+          </div>
           <div class="pic-layer">
             <img src="./img/wine-education.jpg" />
             <h2>Wine Education</h2>
           </div>
-          <div class="mask">
-            <h3>Wine Education</h3>
-            <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
-            <a href="#" class="info">Read More</a>
-          </div>
         </div>
         <div class="nav-option">
+          <div class="mask">
+              <h3>Industry News</h3>
+              <p>Learn the latest in industry happenings that affect the grape growing season, vintage availability, and the marketplace.</p>
+              <a href="#" class="info">Read More</a>
+          </div>
           <div class="pic-layer">
             <img src="./img/merlot-cluster.jpg" />
             <h2>Industry News</h2>
           </div>
-          <div class="mask">
-              <h3>Industry News</h3>
-              <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
-              <a href="#" class="info">Read More</a>
-          </div>
         </div>
         <div class="nav-option">
-          <div class="pic-layer">
-            <img src="./img/bottle-cellar.jpg"  alt"Photo by Javier Balseiro on Unsplash">
-            <h2>My Cellar</h2>
-          </div>
           <div class="mask">
               <h3>My Cellar</h3>
-              <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</p>
+              <p>Keep track of the wines you own and those you hope to acquire. Organize your collection by region, variety, or vintage.</p>
               <a href="#" class="info">Read More</a>
+          </div>
+          <div class="pic-layer">
+            <img src="./img/bottle-cellar.jpg"  alt="Photo by Javier Balseiro on Unsplash">
+            <h2>My Cellar</h2>
           </div>
         </div>
       </div>
   </main>
   <footer>
-
+    <img src="./img/winecierge-logo-light.svg">
   </footer>
 </body>
 </html>
