added explanatory comments, cleaned up css variables

--- a/lesson04/assignment/index.html
+++ b/lesson04/assignment/index.html
@@ -21,8 +21,8 @@
       <a href="login.html">My Cellar</a>
     </nav> -->
   </header>
-  <!-- Begin html based on source code - source: https://www.mockplus.com/resource/post/30-excellent-ui-hover-animations-for-your-inspiration -->
-  <main class="main">
+  <!-- Begin html based on source code - source: https://tympanus.net/codrops/2011/11/02/original-hover-effects-with-css3/ -->
+  <main class="main"> <!--Main section of homepage serves as navigation hub for website-->
     <div class="box-container">
         <div class="nav-option">
           <div class="mask">
