--- a/lesson05/assignment/index.html
+++ b/lesson05/assignment/index.html
@@ -9,7 +9,37 @@
     </head>
     <body>
         <main class="main">
-          
+          <header class="header">
+            <h1>Header</h1>
+          </header>
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href=# class="nav__link">Nav Item 1</a>
+              </li>
+              <li class="nav__item">
+                <a href=# class="nav__link">Nav Item 2</a>
+              </li>
+              <li class="nav__item">
+                <a href=# class="nav__link">Nav Item 3</a>
+              </li>
+              <li class="nav__item">
+                <a href=# class="nav__link">Nav Item 4</a>
+              </li>
+              <li class="nav__item">
+                <a href=# class="nav__link">Nav Item 5</a>
+              </li>
+            </ul>
+          </nav>
+          <aside class="sidebar">
+            <h2>Sidebar</h2>
+          </aside>
+          <section class="main-content">
+            <h2>Main Content</h2>
+          </section>
+          <footer class="footer">
+            <h2>Footer</h2>
+          </footer>
         </main>
     </body>
 </html>
