--- a/lesson05/assignment/index.html
+++ b/lesson05/assignment/index.html
@@ -1,45 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link rel="stylesheet" href="css/style.css" />
-        <title>Assignment 05 - CSS Grid</title>
-    </head>
-    <body>
-        <main class="main">
-          <header class="header">
-            <h1>Header</h1>
-          </header>
-          <nav class="nav">
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a href=# class="nav__link">Nav Item 1</a>
-              </li>
-              <li class="nav__item">
-                <a href=# class="nav__link">Nav Item 2</a>
-              </li>
-              <li class="nav__item">
-                <a href=# class="nav__link">Nav Item 3</a>
-              </li>
-              <li class="nav__item">
-                <a href=# class="nav__link">Nav Item 4</a>
-              </li>
-              <li class="nav__item">
-                <a href=# class="nav__link">Nav Item 5</a>
-              </li>
-            </ul>
-          </nav>
-          <aside class="sidebar">
-            <h2>Sidebar</h2>
-          </aside>
-          <section class="main-content">
-            <h2>Main Content</h2>
-          </section>
-          <footer class="footer">
-            <h2>Footer</h2>
-          </footer>
-        </main>
-    </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Winecierge.com</title>
+</head>
+<body>
+  <header class="header">
+    <div class="header__logo-container">
+      <img src="./img/winecierge-logo-light.svg">
+      <h3>Helping you plan your next wine experience</h3>
+    </div>
+  </header>
+  <!-- Begin html based on source code - source: https://tympanus.net/codrops/2011/11/02/original-hover-effects-with-css3/ -->
+  <main class="main"> <!--Main section of homepage serves as navigation hub for website-->
+    <div class="box-container">
+        <div class="nav-option">
+          <div class="mask">
+              <h3>About Winecierge</h3>
+              <p>Offering introductory lessons and the latest in industry news, we're here to serve as a concierge of wine experiences for burgeoning wine enthusiasts.</p>
+              <a href="#" class="info">Read More</a>
+          </div>
+          <div class="pic-layer">
+            <img src="./img/red-mtn.jpg">
+            <h2>About Winecierge</h2>
+          </div>
+        </div>
+        <div class="nav-option">
+          <div class="mask">
+            <h3>Wine Education</h3>
+            <p>Follow our blog of brief lessons about wine regions, the science of winemaking, and sensory appreciation of wine.</p>
+            <a href="#" class="info">Read More</a>
+          </div>
+          <div class="pic-layer">
+            <img src="./img/wine-education.jpg" />
+            <h2>Wine Education</h2>
+          </div>
+        </div>
+        <div class="nav-option">
+          <div class="mask">
+              <h3>Industry News</h3>
+              <p>Learn the latest in industry happenings that affect the grape growing season, vintage availability, and the marketplace.</p>
+              <a href="#" class="info">Read More</a>
+          </div>
+          <div class="pic-layer">
+            <img src="./img/merlot-cluster.jpg" />
+            <h2>Industry News</h2>
+          </div>
+        </div>
+        <div class="nav-option">
+          <div class="mask">
+              <h3>My Cellar</h3>
+              <p>Keep track of the wines you own and those you hope to acquire. Organize your collection by region, variety, or vintage.</p>
+              <a href="my-cellar.html" class="info">Read More</a>
+          </div>
+          <div class="pic-layer">
+            <img src="./img/bottle-cellar.jpg"  alt="Photo by Javier Balseiro on Unsplash">
+            <h2>My Cellar</h2>
+          </div>
+        </div>
+      </div>
+  </main>
+  <footer>
+    <img src="./img/winecierge-logo-light.svg">
+  </footer>
+</body>
 </html>
