created flexbox framework for wine tiles

--- a/lesson05/assignment/my-cellar.html
+++ b/lesson05/assignment/my-cellar.html
@@ -38,7 +38,33 @@
             <h2>Sidebar</h2>
           </aside>
           <section class="main-content">
-            <h2>Main Content</h2>
+            <h2>My Cellar</h2>
+            <div class="main-content__container">
+              <article class="main-content__tile">
+                <h3>Wine 1</h3>
+                <p><span class="main-content--bold">Description:</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <p><span class="main-content--bold">Quantity:</span> 6 bottles</p>
+                <p><span class="main-content--bold">Value:</span> $125</p>
+              </article>
+              <article class="main-content__tile">
+                <h3>Wine 2</h3>
+                <p><span class="main-content--bold">Description:</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <p><span class="main-content--bold">Quantity:</span> 6 bottles</p>
+                <p><span class="main-content--bold">Value:</span> $125</p>
+              </article>
+              <article class="main-content__tile">
+                <h3>Wine 3</h3>
+                <p><span class="main-content--bold">Description:</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <p><span class="main-content--bold">Quantity:</span> 6 bottles</p>
+                <p><span class="main-content--bold">Value:</span> $125</p>
+              </article>
+              <article class="main-content__tile">
+                <h3>Wine 4</h3>
+                <p><span class="main-content--bold">Description:</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <p><span class="main-content--bold">Quantity:</span> 6 bottles</p>
+                <p><span class="main-content--bold">Value:</span> $125</p>
+              </article>
+            </div>
           </section>
           <footer class="footer">
             <img src="./img/winecierge-logo-light.svg">
