--- a/lesson05/assignment/my-cellar.html
+++ b/lesson05/assignment/my-cellar.html
@@ -35,34 +35,60 @@
             </ul>
           </nav>
           <aside class="sidebar">
-            <h2>Sidebar</h2>
+            <h2>Wish List</h2>
+            <article class="sidebar__article">
+              <h4>Domaine Faiveley Gevrey-Chambertin 1997</h4>
+              <p><span class="main-content--bold">Origin:</span> Burgundy, France</p>
+              <p><span class="main-content--bold">Description:</span> *API info* Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p><span class="main-content--bold">Price:</span> *API data*</p>
+            </article>
+            <article class="sidebar__article">
+              <h4>Septima Malbec</h4>
+              <p><span class="main-content--bold">Origin:</span> Mendoza, Argentina</p>
+              <p><span class="main-content--bold">Description:</span> *API info* Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p><span class="main-content--bold">Price:</span> *API data*</p>
+            </article>
+            <article class="sidebar__article">
+              <h4>Massalto Irreverent</h4>
+              <p><span class="main-content--bold">Origin:</span> Columbia Valley, Washington</p>
+              <p><span class="main-content--bold">Description:</span> *API info* Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p><span class="main-content--bold">Price:</span> *API data*</p>
+            </article>
           </aside>
           <section class="main-content">
             <h2>My Cellar</h2>
             <div class="main-content__container">
               <article class="main-content__tile">
-                <h3>Wine 1</h3>
-                <p><span class="main-content--bold">Description:</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                <p><span class="main-content--bold">Quantity:</span> 6 bottles</p>
+                <h4>Domaine Faiveley Gevrey-Chambertin 2009</h4>
+                <img src="./img/domaine-faiveley.png" class="main-content__img">
+                <p><span class="main-content--bold">Origin:</span> Burgundy, France</p>
+                <p><span class="main-content--bold">Description:</span> *API info* Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p><span class="main-content--bold">Quantity:</span> 1 bottle</p>
+                <p><span class="main-content--bold">Value:</span> $110</p>
+              </article>
+              <article class="main-content__tile">
+                <h4>Domaine de Ferrand Chateauneuf-du-Pape 2005</h4>
+                <img src="./img/domaine-de-ferrand.png" class="main-content__img">
+                <p><span class="main-content--bold">Origin:</span> Rhone, France</p>
+                <p><span class="main-content--bold">Description:</span> *API info* Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p><span class="main-content--bold">Quantity:</span> 2 bottles</p>
                 <p><span class="main-content--bold">Value:</span> $125</p>
               </article>
               <article class="main-content__tile">
-                <h3>Wine 2</h3>
-                <p><span class="main-content--bold">Description:</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                <h4>DeLille Cellars D2 Bordeaux Blend 2018</h4>
+                <img src="./img/delille-D2.png" class="main-content__img">
+                <p><span class="main-content--bold">Origin:</span> Columbia Valley, Washington</p>
+                <p><span class="main-content--bold">Description:</span> *API info* Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <p><span class="main-content--bold">Quantity:</span> 6 bottles</p>
-                <p><span class="main-content--bold">Value:</span> $125</p>
+                <p><span class="main-content--bold">Value:</span> $45</p>
               </article>
               <article class="main-content__tile">
-                <h3>Wine 3</h3>
-                <p><span class="main-content--bold">Description:</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                <p><span class="main-content--bold">Quantity:</span> 6 bottles</p>
-                <p><span class="main-content--bold">Value:</span> $125</p>
-              </article>
-              <article class="main-content__tile">
-                <h3>Wine 4</h3>
-                <p><span class="main-content--bold">Description:</span> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                <p><span class="main-content--bold">Quantity:</span> 6 bottles</p>
-                <p><span class="main-content--bold">Value:</span> $125</p>
+                <h4>Vavasour Sauvignon Blanc 2020</h4>
+                <img src="./img/vavasour-blanc.png" class="main-content__img">
+                <p><span class="main-content--bold">Origin:</span> Marlborough, New Zealand</p>
+                <p><span class="main-content--bold">Description:</span> *API info* Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p><span class="main-content--bold">Quantity:</span> 12 bottles</p>
+                <p><span class="main-content--bold">Value:</span> $15</p>
               </article>
             </div>
           </section>
