--- a/lesson05/assignment/my-cellar.html
+++ b/lesson05/assignment/my-cellar.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <main class="main">
-          <header class="header">
+          <header class="header" id="Top">
             <div class="header__logo-container">
               <img src="./img/winecierge-logo-light.svg">
               <h3>Helping you plan your next wine experience</h3>
@@ -94,6 +94,10 @@
           </section>
           <footer class="footer">
             <img src="./img/winecierge-logo-light.svg">
+            <nav class="footer__nav">
+              <a href="index.html" class="footer__link">Home</a>
+              <a href="#Top" class="footer__link">Back to Top</a>
+            </nav>
           </footer>
         </main>
     </body>
