added comments and refined responsivity

--- a/lesson05/assignment/my-cellar.html
+++ b/lesson05/assignment/my-cellar.html
@@ -34,6 +34,7 @@
               </li>
             </ul>
           </nav>
+          <!-- Sidebar contains wines on a user's wishlist -->
           <aside class="sidebar">
             <h2>Wish List</h2>
             <article class="sidebar__article">
@@ -55,6 +56,7 @@
               <p><span class="main-content--bold">Price:</span> *API data*</p>
             </article>
           </aside>
+          <!-- The main section shows the wines a user currently has in their cellar -->
           <section class="main-content">
             <h2>My Cellar</h2>
             <div class="main-content__container">
