--- a/lesson05/assignment/index.html
+++ b/lesson05/assignment/index.html
@@ -1,77 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Winecierge.com</title>
-</head>
-<body class="home">
-  <main class="main-home">
-    <header class="header" id="Top">
-      <div class="header__logo-container">
-        <img src="./img/winecierge-logo-light.svg">
-        <h3>Helping you plan your next wine experience</h3>
-      </div>
-    </header>
-    <!-- Begin html based on source code - source: https://tympanus.net/codrops/2011/11/02/original-hover-effects-with-css3/ -->
-    <!--Main-page section of homepage serves as navigation hub for website-->
-    <section class="main-content-home">
-      <h2 class="alert">Instructors: <br> Click 'Read More' under My Cellar to view content for Assignment 5</h2>
-      <div class="container">
-        <div class="container__nav-option">
-          <div class="container__mask">
-              <h3>About Winecierge</h3>
-              <p>Offering introductory lessons and the latest in industry news, we're here to serve as a concierge of wine experiences for burgeoning wine enthusiasts.</p>
-              <a href="#" class="container__info">Read More</a>
-          </div>
-          <div class="container__pic-layer">
-            <img src="./img/red-mtn.jpg">
-            <h2>About Winecierge</h2>
-          </div>
-        </div>
-        <div class="container__nav-option">
-          <div class="container__mask">
-            <h3>Wine Education</h3>
-            <p>Follow our blog of brief lessons about wine regions, the science of winemaking, and sensory appreciation of wine.</p>
-            <a href="#" class="info">Read More</a>
-          </div>
-          <div class="container__pic-layer">
-            <img src="./img/wine-education.jpg" />
-            <h2>Wine Education</h2>
-          </div>
-        </div>
-        <div class="container__nav-option">
-          <div class="container__mask">
-              <h3>Industry News</h3>
-              <p>Learn the latest in industry happenings that affect the grape growing season, vintage availability, and the marketplace.</p>
-              <a href="#" class="info">Read More</a>
-          </div>
-          <div class="container__pic-layer">
-            <img src="./img/merlot-cluster.jpg" />
-            <h2>Industry News</h2>
-          </div>
-        </div>
-        <div class="container__nav-option">
-          <div class="container__mask">
-              <h3>My Cellar</h3>
-              <p>Keep track of the wines you own and those you hope to acquire. Organize your collection by region, variety, or vintage.</p>
-              <a href="my-cellar.html" class="info">Read More</a>
-          </div>
-          <div class="container__pic-layer">
-            <img src="./img/bottle-cellar.jpg"  alt="Photo by Javier Balseiro on Unsplash">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link rel="stylesheet" href="css/style.css" />
+        <title>Assignment 05 - CSS Grid</title>
+    </head>
+    <body>
+        <main class="main">
+          <header class="header" id="Top">
+            <div class="header-img">
+              <div class="header-img__logo-container">
+                <img src="./img/winecierge-logo-light.svg">
+                <h3>Helping you plan your next wine experience</h3>
+              </div>
+            </div>
+            <nav class="nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="index-home.html" class="nav__link">Home</a>
+                </li>
+                <li class="nav__item">
+                  <a href=# class="nav__link">About</a>
+                </li>
+                <li class="nav__item">
+                  <a href=# class="nav__link">Wine Education</a>
+                </li>
+                <li class="nav__item">
+                  <a href=# class="nav__link">Industry News</a>
+                </li>
+                <li class="nav__item">
+                  <a href=# class="nav__link">My Cellar</a>
+                </li>
+              </ul>
+            </nav>
+          </header>
+          <!-- Sidebar contains wines on a user's wishlist -->
+          <aside class="sidebar">
+            <h2>Wish List</h2>
+            <article class="sidebar__article">
+              <h4>Domaine Faiveley Gevrey-Chambertin 1997</h4>
+              <p><span class="main-content--bold">Origin:</span> Burgundy, France</p>
+              <p><span class="main-content--bold">Description:</span> *API info* Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p><span class="main-content--bold">Price:</span> *API data*</p>
+            </article>
+            <article class="sidebar__article">
+              <h4>Septima Malbec 2015</h4>
+              <p><span class="main-content--bold">Origin:</span> Mendoza, Argentina</p>
+              <p><span class="main-content--bold">Description:</span> *API info* Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p><span class="main-content--bold">Price:</span> *API data*</p>
+            </article>
+            <article class="sidebar__article">
+              <h4>Massalto Irreverent 2018</h4>
+              <p><span class="main-content--bold">Origin:</span> Columbia Valley, Washington</p>
+              <p><span class="main-content--bold">Description:</span> *API info* Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p><span class="main-content--bold">Price:</span> *API data*</p>
+            </article>
+          </aside>
+          <!-- The main section shows the wines a user currently has in their cellar -->
+          <section class="main-content">
             <h2>My Cellar</h2>
-          </div>
-        </div>
-      </div>
-    </section>
-    <footer class="footer">
-      <img src="./img/winecierge-logo-light.svg">
-      <nav class="footer__nav">
-        <a href="#Top" class="footer__link">Back to Top</a>
-      </nav>
-    </footer>
-  </main>
-</body>
+            <div class="main-content__container">
+              <article class="main-content__tile">
+                <h4>Domaine Faiveley Gevrey-Chambertin 2009</h4>
+                <img src="./img/domaine-faiveley.png" class="main-content__img">
+                <p><span class="main-content--bold">Origin:</span> Burgundy, France</p>
+                <p><span class="main-content--bold">Description:</span> *API info* Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p><span class="main-content--bold">Quantity:</span> 1 bottle</p>
+                <p><span class="main-content--bold">Value:</span> $110</p>
+              </article>
+              <article class="main-content__tile">
+                <h4>Domaine de Ferrand Chateauneuf-du-Pape 2005</h4>
+                <img src="./img/domaine-de-ferrand.png" class="main-content__img">
+                <p><span class="main-content--bold">Origin:</span> Rhone, France</p>
+                <p><span class="main-content--bold">Description:</span> *API info* Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p><span class="main-content--bold">Quantity:</span> 2 bottles</p>
+                <p><span class="main-content--bold">Value:</span> $125</p>
+              </article>
+              <article class="main-content__tile">
+                <h4>DeLille Cellars D2 Bordeaux Blend 2018</h4>
+                <img src="./img/delille-D2.png" class="main-content__img">
+                <p><span class="main-content--bold">Origin:</span> Columbia Valley, Washington</p>
+                <p><span class="main-content--bold">Description:</span> *API info* Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p><span class="main-content--bold">Quantity:</span> 6 bottles</p>
+                <p><span class="main-content--bold">Value:</span> $45</p>
+              </article>
+              <article class="main-content__tile">
+                <h4>Vavasour Sauvignon Blanc 2020</h4>
+                <img src="./img/vavasour-blanc.png" class="main-content__img">
+                <p><span class="main-content--bold">Origin:</span> Marlborough, New Zealand</p>
+                <p><span class="main-content--bold">Description:</span> *API info* Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p><span class="main-content--bold">Quantity:</span> 12 bottles</p>
+                <p><span class="main-content--bold">Value:</span> $15</p>
+              </article>
+            </div>
+          </section>
+          <footer class="footer">
+            <img src="./img/winecierge-logo-light.svg">
+            <nav class="footer__nav">
+              <a href="index-home.html" class="footer__link">Home</a>
+              <a href="#Top" class="footer__link">Back to Top</a>
+            </nav>
+          </footer>
+        </main>
+    </body>
 </html>
