--- a/lesson05/assignment/index-home.html
+++ b/lesson05/assignment/index-home.html
@@ -20,51 +20,50 @@
     <!-- Begin html based on source code - source: https://tympanus.net/codrops/2011/11/02/original-hover-effects-with-css3/ -->
     <!--Main-page section of homepage serves as navigation hub for website-->
     <section class="main-content-home">
-      <h2 class="alert">Instructors: <br> Click 'Read More' under My Cellar to view content for Assignment 5</h2>
-      <a href="index.html" class="container__info">Read More</a>
+      <h2 class="alert"><span class="alert--grow">Instructors:</span> <br> Click 'Read More' under My Cellar to view content for Assignment 5</h2>
       <div class="container">
         <div class="container__nav-option">
-          <div class="container__mask">
-              <h3>About Winecierge</h3>
-              <p>Offering introductory lessons and the latest in industry news, we're here to serve as a concierge of wine experiences for burgeoning wine enthusiasts.</p>
-              <a href="#" class="container__info">Read More</a>
-          </div>
           <div class="container__pic-layer">
             <img src="./img/red-mtn.jpg" class="container__img">
             <h2 class="container__title">About Winecierge</h2>
           </div>
+          <div class="container__mask">
+              <h3>About Winecierge</h3>
+              <p>Offering introductory lessons and the latest in industry news, we're here to serve as a concierge of wine experiences for burgeoning wine enthusiasts.</p>
+              <a href="#" class="container__link">Read More</a>
+          </div>
         </div>
         <div class="container__nav-option">
-          <div class="container__mask">
-            <h3>Wine Education</h3>
-            <p>Follow our blog of brief lessons about wine regions, the science of winemaking, and sensory appreciation of wine.</p>
-            <a href="#" class="container__info">Read More</a>
-          </div>
           <div class="container__pic-layer">
             <img src="./img/wine-education.jpg" class="container__img"/>
             <h2 class="container__title">Wine Education</h2>
           </div>
+          <div class="container__mask">
+            <h3>Wine Education</h3>
+            <p>Follow our blog of brief lessons about wine regions, the science of winemaking, and sensory appreciation of wine.</p>
+            <a href="#" class="container__link">Read More</a>
+          </div>
         </div>
         <div class="container__nav-option">
-          <div class="container__mask">
-              <h3>Industry News</h3>
-              <p>Learn the latest in industry happenings that affect the grape growing season, vintage availability, and the marketplace.</p>
-              <a href="#" class="container__info">Read More</a>
-          </div>
           <div class="container__pic-layer">
             <img src="./img/merlot-cluster.jpg" class="container__img"/>
             <h2 class="container__title">Industry News</h2>
           </div>
+          <div class="container__mask">
+              <h3>Industry News</h3>
+              <p>Learn the latest in industry happenings that affect the grape growing season, vintage availability, and the marketplace.</p>
+              <a href="#" class="container__link">Read More</a>
+          </div>
         </div>
         <div class="container__nav-option">
-          <div class="container__mask">
-              <h3>My Cellar</h3>
-              <p>Keep track of the wines you own and those you hope to acquire. Organize your collection by region, variety, or vintage.</p>
-              <a href="index.html" class="container__info">Read More</a>
-          </div>
           <div class="container__pic-layer">
             <img src="./img/bottle-cellar.jpg" class="container__img" alt="Photo by Javier Balseiro on Unsplash">
             <h2 class="container__title">My Cellar</h2>
+          </div>
+          <div class="container__mask">
+            <h3>My Cellar</h3>
+            <p>Keep track of the wines you own and those you hope to acquire. Organize your collection by region, variety, or vintage.</p>
+            <a href="index.html" class="container__link">Read More</a>
           </div>
         </div>
       </div>
