added education page with grid and popovers

--- a/lesson06/assignment/about.html
+++ b/lesson06/assignment/about.html
@@ -64,22 +64,22 @@
               <div class="container">
                 <div class="row align-items-center">
                   <div class="col-sm-12 col-md-6 col-xl-4 py-3">
-                    <img src="./img/gallery/wahluke-slope.jpg" class="img-fluid" alt="">
+                    <img src="./img/gallery/dont-rush.jpg" class="img-fluid" alt="">
                   </div>
                   <div class="col-sm-12 col-md-6 col-xl-4 py-3">
                     <img src="./img/gallery/vines-sky.jpg" class="img-fluid" alt="">
                   </div>
                   <div class="col-sm-12 col-md-6 col-xl-4 py-3">
-                    <img src="./img/gallery/dont-rush.jpg" class="img-fluid" alt="">
-                  </div>
-                  <div class="col-sm-12 col-md-6 col-xl-4 py-3">
-                    <img src="./img/gallery/tasting-setting.jpg" class="img-fluid" alt="">
+                    <img src="./img/gallery/wahluke-slope.jpg" class="img-fluid" alt="">
                   </div>
                   <div class="col-sm-12 col-md-6 col-xl-4 py-3">
                     <img src="./img/gallery/sauv-blanc.jpg" class="img-fluid" alt="">
                   </div>
                   <div class="col-sm-12 col-md-6 col-xl-4 py-3">
                     <img src="./img/gallery/charcuterie.jpg" class="img-fluid" alt="">
+                  </div>
+                  <div class="col-sm-12 col-md-6 col-xl-4 py-3">
+                    <img src="./img/gallery/tasting-setting.jpg" class="img-fluid" alt="">
                   </div>
                 </div>
               </div>
@@ -89,16 +89,10 @@
             <div class="w-25 mx-auto">
               <img src="./img/winecierge-logo-white.svg">
               <nav class="text-white text-center mt-2">
-                <a href="#Top" class="" data-toggle="tooltip" data-placement="top" title="hello world">Back to Top</a>
+                <a href="#Top" class="text-white">Back to Top</a>
               </nav>
             </div>
           </footer>
         </main>
-
-        <script>
-          $(function() {
-            $('[data-toggle]="tooltip"]').tooltip();
-          })
-        </script>
     </body>
 </html>
