--- a/lesson06/assignment/index.html
+++ b/lesson06/assignment/index.html
@@ -32,10 +32,10 @@
                       <a	class="nav-link px-3"	href="about.html">About</a>
                     </li>
                     <li	class="nav-item">
-                      <a	class="nav-link px-3"	href="#">Education</a>
+                      <a	class="nav-link px-3"	href="education.html">Education</a>
                     </li>
                     <li	class="nav-item">
-                      <a	class="nav-link px-3"	href="#">News</a>
+                      <a	class="nav-link px-3"	href="news.html">News</a>
                     </li>
                   </ul>
                 </div>
@@ -95,7 +95,7 @@
             <div class="w-25 mx-auto">
               <img src="./img/winecierge-logo-white.svg">
               <nav class="text-white text-center mt-2">
-                <a href="#Top">Back to Top</a>
+                <a href="#Top" class="text-white">Back to Top</a>
               </nav>
             </div>
           </footer>
