added accordion news page

--- a/lesson06/assignment/index.html
+++ b/lesson06/assignment/index.html
@@ -91,6 +91,12 @@
               </a>
             </div>
           </section>
+          <div class="jumbotron jumbotron-fluid w-75 mx-auto border border-danger rounded">
+            <div class="container w-75">
+              <h1 class="display-4 mx-auto">This month only...</h1>
+              <p class="lead mx-auto">For the month of July, receive 15% off Riedel glassware at William Sonoma. Use code <span class="text-danger text-uppercase font-italic font-weight-bold bg-dark px-2 py-1">winecierge</span> at checkout.</p>
+            </div>
+          </div>
           <footer class="bg-dark py-5">
             <div class="w-25 mx-auto">
               <img src="./img/winecierge-logo-white.svg">
