--- a/lesson06/assignment/about.html
+++ b/lesson06/assignment/about.html
@@ -35,7 +35,7 @@
                       <a	class="nav-link px-3"	href="education.html">Education</a>
                     </li>
                     <li	class="nav-item">
-                      <a	class="nav-link px-3"	href="new.html">News</a>
+                      <a	class="nav-link px-3"	href="news.html">News</a>
                     </li>
                   </ul>
                 </div>
