--- a/lesson06/assignment/news.html
+++ b/lesson06/assignment/news.html
@@ -13,6 +13,7 @@
     </head>
     <body>
         <main>
+          <!-- HEADER SECTION W/ NAV -->
           <header id="Top">
             <div class="bg-dark">
               <div class="w-50 mx-auto py-3">
@@ -29,19 +30,20 @@
                 <div	id="navbarNav"	class="collapse	navbar-collapse">
                   <ul	class="navbar-nav ml-4">
                     <li	class="nav-item">
+                      <a	class="nav-link px-3"	href="index.html">Home</a>
+                    </li>
+                    <li	class="nav-item">
                       <a	class="nav-link px-3"	href="about.html">About</a>
                     </li>
                     <li	class="nav-item">
                       <a	class="nav-link px-3"	href="education.html">Education</a>
-                    </li>
-                    <li	class="nav-item">
-                      <a	class="nav-link px-3"	href="news.html">News</a>
                     </li>
                   </ul>
                 </div>
               </div>
             </nav>
           </header>
+          <!-- MAIN PAGE SECTION: UTILIZES ACCORDION -->
           <section>
             <div class="w-75 mx-auto my-4">
               <div class="text-center">
@@ -98,6 +100,7 @@
               </div>
             </div>
           </section>
+          <!-- FOOTER SECTION -->
           <footer class="bg-dark py-5">
             <div class="w-25 mx-auto">
               <img src="./img/winecierge-logo-white.svg">
