--- a/lesson06/assignment/about.html
+++ b/lesson06/assignment/about.html
@@ -13,6 +13,7 @@
     </head>
     <body>
         <main>
+          <!-- HEADER SECTION W/ NAV -->
           <header id="Top">
             <div class="bg-dark">
               <div class="w-50 mx-auto py-3">
@@ -42,6 +43,7 @@
               </div>
             </nav>
           </header>
+          <!-- MAIN PAGE SECTION: INCLUDES GRID + IMAGE GALLERY -->
           <section>
             <div class="w-75 mx-auto my-3">
               <h1 class="text-center pb-3 border border-black border-top-0 border-right-0 border-left-0">About Winecierge</h1>
@@ -60,7 +62,6 @@
             </div>
             <div class="w-75 mx-auto my-3">
               <h3 class="font-italic text-center">Gallery</h3>
-              <p class="text-center"><small>Click or hover over an image for a desription</small></p>
               <div class="container">
                 <div class="row align-items-center">
                   <div class="col-sm-12 col-md-6 col-xl-4 py-3">
@@ -85,6 +86,7 @@
               </div>
             </div>
           </section>
+          <!-- FOOTER SECTION -->
           <footer class="bg-dark py-5">
             <div class="w-25 mx-auto">
               <img src="./img/winecierge-logo-white.svg">
