--- a/lesson06/assignment/index.html
+++ b/lesson06/assignment/index.html
@@ -13,6 +13,7 @@
     </head>
     <body>
         <main>
+          <!-- HEADER SECTION W/ NAV -->
           <header id="Top">
             <div class="bg-dark">
               <div class="w-50 mx-auto py-3">
@@ -42,14 +43,15 @@
               </div>
             </nav>
           </header>
+          <!-- MAIN PAGE SECTION: INCLUDES CAROUSEL + JUMBOTRON -->
           <section>
+            <!-- CAROUSEL -->
             <div id="carouselExampleIndicators" class="carousel slide w-75 py-5 mx-auto" data-ride="carousel">
               <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-
               </ol>
               <div class="carousel-inner bg-dark p-2">
                 <div class="carousel-item active">
@@ -90,13 +92,15 @@
                 <span class="sr-only">Next</span>
               </a>
             </div>
-          </section>
-          <div class="jumbotron jumbotron-fluid w-75 mx-auto border border-danger rounded">
-            <div class="container w-75">
-              <h1 class="display-4 mx-auto">This month only...</h1>
-              <p class="lead mx-auto">For the month of July, receive 15% off Riedel glassware at William Sonoma. Use code <span class="text-danger text-uppercase font-italic font-weight-bold bg-dark px-2 py-1">winecierge</span> at checkout.</p>
+            <!-- JUMBOTRON -->
+            <div class="jumbotron jumbotron-fluid w-75 mx-auto border border-danger rounded">
+              <div class="container w-75">
+                <h1 class="display-4 mx-auto">This month only...</h1>
+                <p class="lead mx-auto">For the month of July, receive 15% off Riedel glassware at William Sonoma. Use code <span class="text-danger text-uppercase font-italic font-weight-bold bg-dark px-2 py-1">winecierge</span> at checkout.</p>
+              </div>
             </div>
-          </div>
+          </section>
+          <!-- FOOTER SECTION -->
           <footer class="bg-dark py-5">
             <div class="w-25 mx-auto">
               <img src="./img/winecierge-logo-white.svg">
